add intent demo

--- a/SiriShortcutsDemo/SiriShortcutsDemo/Base.lproj/Main.storyboard
+++ b/SiriShortcutsDemo/SiriShortcutsDemo/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="zk0-Ef-Cfo" kind="show" id="9LG-SK-1Ja"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -72,10 +75,10 @@
             </objects>
             <point key="canvasLocation" x="-230" y="193"/>
         </scene>
-        <!--Actity Mode View Controller-->
+        <!--NSUserActivityDemo-->
         <scene sceneID="XuC-jL-6tq">
             <objects>
-                <viewController id="Nxj-cv-aqJ" customClass="ActityModeViewController" customModule="SiriShortcutsDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="NSUserActivityDemo" id="Nxj-cv-aqJ" customClass="ActityModeViewController" customModule="SiriShortcutsDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q7l-NS-c6A">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -113,7 +116,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tnV-Xl-drr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="481" y="193"/>
+            <point key="canvasLocation" x="713" y="-206"/>
+        </scene>
+        <!--Intent Demo-->
+        <scene sceneID="gxc-HO-b4a">
+            <objects>
+                <viewController title="Intent Demo" id="zk0-Ef-Cfo" customClass="IntentViewController" customModule="SiriShortcutsDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hjO-Re-hnT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dbp-Lg-hGj">
+                                <rect key="frame" x="152" y="159" width="71" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1hw-ED-iI9"/>
+                                </constraints>
+                                <state key="normal" title="Add to Siri"/>
+                                <connections>
+                                    <action selector="addButtonPressed:" destination="zk0-Ef-Cfo" eventType="touchUpInside" id="ryX-Ok-zXH"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Dbp-Lg-hGj" firstAttribute="top" secondItem="RoM-kC-W6t" secondAttribute="top" constant="95" id="1eh-v6-P6l"/>
+                            <constraint firstItem="Dbp-Lg-hGj" firstAttribute="centerX" secondItem="hjO-Re-hnT" secondAttribute="centerX" id="BNN-wE-66c"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RoM-kC-W6t"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sy6-3x-mmp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="713" y="457"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="B6m-S1-HoG">
