update: update logo

--- a/SiriShortcutsDemo/EventUI/Base.lproj/MainInterface.storyboard
+++ b/SiriShortcutsDemo/EventUI/Base.lproj/MainInterface.storyboard
@@ -17,7 +17,19 @@
                     <view key="view" contentMode="scaleToFill" id="zMn-AG-sqS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这是一个示例项目" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5x8-sO-bW0">
+                                <rect key="frame" x="90.5" y="64.5" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5x8-sO-bW0" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="0bh-6E-5fs"/>
+                            <constraint firstItem="5x8-sO-bW0" firstAttribute="centerX" secondItem="zMn-AG-sqS" secondAttribute="centerX" id="HY4-Sj-fX1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4PN-XC-lEE"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
